--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,7 @@ before_script:
   - composer install --no-interaction
   - php artisan key:generate
   - php artisan migrate --no-interaction -vvv
+  - php artisan passport:keys
 
 script:
   - vendor/bin/phpunit
