--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/framework": "^6.0",
         "laravel/passport": "^7.5",
         "laravel/tinker": "^1.0",
+        "laravelcollective/html": "^6.0",
         "spatie/laravel-permission": "^3.0"
     },
     "require-dev": {
