Populate database for testing purposes

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,7 @@ before_script:
   - php artisan key:generate
   - php artisan migrate --no-interaction -vvv
   - php artisan passport:keys
+  - php artisan db:seed
 
 script:
   - vendor/bin/phpunit
